<resources>
    <string name="app_name">Recipe Search</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="search_default_text">Recipe / Ingredient</string>
    <string name="action_settings" />
    <string name="ingredient">Ingredient</string>
    <string name="dish">Dish</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="number_of_results">Number of Results</string>
    <string name="search_label">0</string>
    <string name="settings_description">1</string>
    <string name="test">test</string>
    <string name="ingredients">Ingredients</string>
    <string name="similar_recipes">Similar Recipes</string>
    <string name="directions">Directions</string>
    <string name="place_holder">Place_Holder</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="cancel">Cancel</string>

    <!-- ******** Favorites fragment ******** -->

    <string name="recipe">Recipe</string>
    <string name="set_rating">Set Rating</string>

    <!-- *************** End **************** -->


    <!-- ******* User login / sign up ******* -->

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <string name="error_passwords">Error: Passwords do not match</string>
    <string name="error_email">Error: E-mail not valid</string>

    <string name="or">or</string>
    <string name="clear"> </string>

    <string name="saved_user">savedUser</string>
    <string name="saved_pass">savedPass</string>

    <string name="connection_error_logged_into_local">Connection error: logged into local</string>
    <string name="login_sucess">Login success: </string>

    <!-- *************** End **************** -->
    <string-array name="food_stuff">
        <item>Similar to Previous Search</item>
        <item>Random</item>
        <item>Custom</item>
        <item>Lamb Burger</item>
        <item>Cheese Pizza</item>
        <item>Fried Shrimp</item>
        <item>fettuccine alfredo</item>
        <item>calamari</item>
        <item>chocolate chunk brownies</item>
        <item>chocolate chunk cookies</item>
        <item>chocolate cake</item>
        <item>scrambled eggs</item>
        <item>lettuce</item>
        <item>Milk Shakes</item>
        <item>Steak</item>
        <item>Japanese Souffle Pancakes</item>
        <item>Taco egg muffin cups</item>
        <item>Greek Lentil Salad</item>
        <item>Lemon-Coconut Sour Cream Cake</item>
        <item>Chicken and potato Bake</item>
        <item>Broccoli Pie</item>
        <item>Buttermilk Chocolate Chip Muffins</item>
        <item>Just here so the one above is seen</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_you_want_to_cook_today">What you want to cook today</string>
    <string name="notes">Notes</string>
    <string name="what_you_want_to_make_tomarrow">What You Want to make Tomarrow</string>
    <string name="planner">Planner</string>
    <string name="Planner">Meal Planner</string>
    <string name="meal_planner_menu">Meal Planner</string>
    <string name="save_changes">Save changes</string>
    <string name="planer">Planer</string>
    <string name="what_you_want_to_make_tomorrow">What you want to make Tomorrow</string>
    <string name="next_similar_recipe">Next Similar Recipe</string>
    <string name="exampleDirections">Place the beef cubes in a bowl. Add the minced garlic, pepper and 3 tbsps. of olive oil. Mix well. Cover and keep in the fridge for a couple of hours.Heat the butter and olive oil in a wide shallow pan — wide enough to contain the beef cubes in a single layer. The heat should be very high.Place the beef in a plastic freezer bag. Add the flour. Shake to coat each piece of meat with flour. It is the flour that will thicken the sauce later and make it stick well to the beef.When the olive oil and butter are hot, add the floured beef, spreading the pieces so that every piece touches the oil. Do not stir for a minute or so to allow the underside to brown. Keep the heat very high. Stir and cook for a few minutes, with occasional stirring, until the beef changes color and a light crust forms.Pour in the Worcestershire sauce and liquid seasoning. Stir briskly; the sauce should thicken quite fast. Add the mushrooms, cook just until heated, stirring occasionally.The actual cooking should take no more than five minutes. If you overcook the beef, the meat will turn tough and dry.Transfer the beef salpicao to a serving platter, sprinkle with toasted garlic bits and finely sliced onion leaves. Serve hot with rice.</string>
    <string name="exampleIngredients">worcestershire sauce, green onions, spring-onions, mushrooms, olive oil, seasoning of choice, butter, garlic, pepper, all purpose flour</string>
    <string name="next_recipe">Next Recipe</string>
    <string name="random_recipe">Random Recipe</string>
    <string name="searching_for_recipe">Searching for Recipe</string>
    <string name="meal_plan_generator">Meal Plan Generator</string>
    <string name="time_frame">Time Frame (Optional)</string>
    <string name="calorie_target">Calorie Target</string>
    <string name="calories">Calories</string>
    <string name="diet">Diet</string>
    <string name="exclusions">Exclusions</string>
    <string name="submit">Submit</string>
    <string name="food_you_want_to_exclude">Food you want to exclude</string>
    <string name="diet2" translatable="false">Diet</string>
    <string name="time_frame2">Time Frame</string>
    <string name="day_or_night">"Day or Night "</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="image_of_meal">image of meal</string>
    <string name="generating_meal_plan">Generating Meal Plan</string>
    <string name="name_of_recipe">Name of Recipe</string>
    <string name="time">Time</string>
    <string name="enter_ingredients_for_recipe">Enter Ingredients for recipe. seperate with ,</string>
    <string name="click_to_select_an_image">Click to select an image</string>
    <string name="load_custom_recipes">Load Custom Recipes</string>
    <string name="clear_saved_recipes">Clear Saved Recipes</string>
    <string name="enter_directions_for_recipe">Enter Directions for Recipe.</string>
    <string name="create_custom_recipe">Create Custom Recipe</string>
    <string name="clear_custom_recipes">Clear Custom Recipes</string>
</resources>
