<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navigationGreen"
    tools:context=".ui.user.login.LoginFragment">

    <LinearLayout
        android:id="@+id/linearLayout_login_user"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15">

        <ImageView
            android:id="@+id/imageView3_login_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/navLight"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_user_black_24dp" />
        <!--            android:backgroundTint="@color/navigationGreen"-->

        <EditText
            android:id="@+id/edit_text_user"
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@color/navLight"
            android:hint="@string/email"
            android:inputType="textCapWords"
            android:textColorHint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_login_pass"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_login_user"
        app:layout_constraintVertical_bias="0.05">

        <ImageView
            android:id="@+id/imageView_login_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/navLight"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_key_black_24dp" />
        <!--            android:backgroundTint="@color/navigationGreen"-->

        <EditText
            android:id="@+id/edit_text_pass"
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@color/navLight"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="159dp" />

    </LinearLayout>

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_login_pass"
        app:layout_constraintVertical_bias="0.0500000" />

    <TextView
        android:id="@+id/textView_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@+id/login_button_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

    <Button
        android:id="@+id/login_button_signup"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login"
        app:layout_constraintVertical_bias="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>